[UPD] Introduce UserCredentials schema update user info responses in API
